--- a/springboot-thymeleaf-curd-web-app/src/main/resources/application.properties
+++ b/springboot-thymeleaf-curd-web-app/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 # DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/demo
+spring.datasource.url=jdbc:mysql://localhost:3306/demo?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
-spring.datasource.password=null
-
+spring.datasource.password=
 # Hibernate
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
